UI changes(Spacing Issue)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,11 +35,11 @@ body {
 }
 
 .css-73imaa {
-  padding: 0px;
+  padding: 0px !important;
 }
 
 .css-pc7201{
-  padding: 0px;
+  padding: 0px !important;
 }
 
 .css-j204z7-MuiFormControlLabel-root.Mui-disabled {
